--- a/main.tex
+++ b/main.tex
@@ -66,6 +66,25 @@
 \pagestyle{empty}
 
 %----------------------------------------------------------------------------------------
+%	CUSTOM COMMANDS
+%----------------------------------------------------------------------------------------
+\newcommand{\cventry}[5]{%
+    \begin{tabularx}{\linewidth}{ L{0.65\linewidth} R{0.3\linewidth} }
+      \textbf{#1} & #2\\
+      #3 &\\[3pt]
+      \multicolumn{2}{@{}X@{}}{%
+        \begin{minipage}[t]{\itemwidth}
+          \begin{itemize}[nosep, leftmargin=2em, itemsep=\itemsepar]
+            #4
+          \end{itemize}
+        \end{minipage}
+      }
+    \end{tabularx}
+  
+    #5% Optional vertical space or other content between entries
+}
+
+%----------------------------------------------------------------------------------------
 %	BEGIN DOCUMENT
 %----------------------------------------------------------------------------------------
 \begin{document}
@@ -80,6 +99,7 @@
 \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ rowanmolony@gmail.com} &
 \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.05\height}\faLinkedin\ rowanmolony} \\
 \end{tabularx}
+
 %----------------------------------------------------------------------------------------
 % SUMMARY
 %----------------------------------------------------------------------------------------
@@ -91,98 +111,39 @@
 %----------------------------------------------------------------------------------------
 \section{Work Experience}
 
-\begin{tabularx}{\linewidth}{ L{0.65\linewidth} R{0.3\linewidth} }
+\cventry{Thalora Ltd}{Dublin, Ireland}
+    {Co-Founder \& Software Engineer (Dec 2023 - Present)}
+    {\item TODO}
+    {}
 
-\textbf{Thalora Ltd} & Dublin, Ireland\\
-Co-Founder \& Software Engineer (Dec 2023 - Present) &\\[3pt]
-\multicolumn{2}{@{}X@{}}{%
-\begin{minipage}[t]{\itemwidth}
-    \begin{itemize}[nosep, leftmargin=2em, itemsep=\itemsepar]
-        \item TODO
-    \end{itemize}
-\end{minipage}
-}
-\end{tabularx}
+\cventry{PowerScope Ltd}{Dublin, Ireland}
+    {Co-Founder \& Software Engineer (Jul 2020 - Feb 2022)}
+    {\item TODO}
+    {}
 
-\begin{tabularx}{\linewidth}{ L{0.65\linewidth} R{0.3\linewidth} }
+\cventry{Mainstream Renewable Power}{Dublin, Ireland}
+    {Web Developer (Oct 2021 - Dec 2023)}
+    {\item TODO}
+    {}
 
-\textbf{PowerScope Ltd} & Dublin, Ireland\\
-Co-Founder \& Software Enegineer (Jul 2020 - Feb 2022) &\\[3pt]
-\multicolumn{2}{@{}X@{}}{%
-\begin{minipage}[t]{\itemwidth}
-    \begin{itemize}[nosep, leftmargin=2em, itemsep=\itemsepar]
-        \item  TODO
-    \end{itemize}
-\end{minipage}
-}
-\end{tabularx}
-
-\begin{tabularx}{\linewidth}{ L{0.65\linewidth} R{0.3\linewidth} }
-\textbf{Mainstream Renewable Power} & Dublin, Ireland\\ 
-Web Developer (Oct 2021 - Dec 2023) &\\[3pt]
-\multicolumn{2}{@{}X@{}}{
-\begin{minipage}[t]{\itemwidth}
-    \begin{itemize}[nosep, leftmargin=2em, itemsep=\itemsepar]
-        \item TODO
-    \end{itemize}
-    \end{minipage}
-}
-\end{tabularx}
-
-\begin{tabularx}{\linewidth}{ L{0.65\linewidth} R{0.3\linewidth} }
-\textbf{Codema} & Dublin, Ireland\\ 
-Data Analyst (Aug 2019 - Oct 2021) &\\[3pt]
-\multicolumn{2}{@{}X@{}}{
-\begin{minipage}[t]{\itemwidth}
-    \begin{itemize}[nosep, leftmargin=2em, itemsep=\itemsepar]
-        \item TODO
-    \end{itemize}
-    \end{minipage}
-}
-\end{tabularx}
-
+\cventry{Codema}{Dublin, Ireland}
+    {Data Analyst (Aug 2019 - Oct 2021)}
+    {\item TODO}
+    {}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
-\section{Education}%
+\section{Education}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{tabularx}%
-{\linewidth}{ L{0.7\linewidth} R{0.25\linewidth}}
-    %
-    \textbf{Master's Mechanical \& Manufacturing Engineering} - First Class Honours & Dublin, Ireland\\
-    Trinity College Dublin (Sept 2018 - June 2019) &
-    \\
-    [2pt]
-    %
-    \multicolumn{2}{@{}X@{}}{
-        \begin{minipage}[t]{\itemwidth}
-            \begin{itemize}%
-            [nosep, leftmargin=2em, itemsep=2pt]
-                % \item
-                % \textbf{Honours:} First Class (1:1)
-                \item TODO
-            \end{itemize}
-        \end{minipage}
-    }%
-\end{tabularx}
+\cventry{Master's Mechanical \& Manufacturing Engineering}{Dublin, Ireland}
+    {Trinity College Dublin (Sept 2018 - June 2019)}
+    {\item TODO}
+    {}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{tabularx}%
-{\linewidth}{ L{0.7\linewidth} R{0.25\linewidth}}
-    %
-    \textbf{Bachelor's Mechanical \& Manufacturing Engineering} - First Class Honours & Dublin, Ireland\\
-    Trinity College Dublin (Sept 2014 - June 2018)&
-     \\[2pt]
-    \multicolumn{2}{@{}X@{}}{
-        \begin{minipage}[t]{\itemwidth}
-            \begin{itemize}%
-            [nosep,after=\strut, leftmargin=2em, itemsep=2pt]
-                \item TODO
-            \end{itemize}
-        \end{minipage}
-    }%
-\end{tabularx}
+\cventry{Bachelor's Mechanical \& Manufacturing Engineering}{Dublin, Ireland}
+    {Trinity College Dublin (Sept 2014 - June 2018)}
+    {\item TODO}
+    {}
 
 \end{document}
