feat: remove summary

--- a/main.tex
+++ b/main.tex
@@ -93,13 +93,7 @@
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
-% SUMMARY
-%----------------------------------------------------------------------------------------
-% \begin{minipage}{0.8\textwidth}
-%     Mechanical Engineer with over two years' experience in the construction industry, specialising in commercial projects. Proficient in a wide range of activities, including design, submitting planning applications, project tendering and bidding, project management, and quality assurance. Demonstrated ability to manage various aspects of projects from concept to completion, ensuring compliance with industry standards.
-% \end{minipage}
-%----------------------------------------------------------------------------------------
-% EXPERIENCE SECTIONS
+% EXPERIENCE
 %----------------------------------------------------------------------------------------
 \section{Work Experience}
 
