doc: reformat comment titles

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
-%----------------------------------------------------------------------------------------
-%	DOCUMENT DEFINITION
-%----------------------------------------------------------------------------------------
+% ---------------------------------------------------------
+% Header
+% ------
+
 \documentclass[a4paper,11pt]{article}
 
 \usepackage[utf8x]{inputenc} % for character encoding
@@ -58,9 +59,9 @@
 \titleformat{\section}{\Large\raggedright}{}{0em}{}[\titlerule]
 \titlespacing{\section}{0pt}{5pt}{5pt}
 
-%----------------------------------------------------------------------------------------
-%	CUSTOM COMMANDS
-%----------------------------------------------------------------------------------------
+%----------
+% Commands
+%----------
 \newcommand{\cventry}[5]{%
     \begin{tabularx}{\linewidth}{ L{0.65\linewidth} R{0.3\linewidth} }
       \textbf{#1} & #2\\
@@ -77,14 +78,15 @@
     #5% Optional vertical space or other content between entries
 }
 
-%----------------------------------------------------------------------------------------
-%	BEGIN DOCUMENT
-%----------------------------------------------------------------------------------------
+
+% ---------------------------------------------------------
+% Document
+% ---------
 \begin{document}
 
-%----------------------------------------------------------------------------------------
-%	TITLE
-%----------------------------------------------------------------------------------------
+%-------
+% Title
+%-------
 \begin{tabularx}{\linewidth}{R{0.3\linewidth} C{0.3\linewidth} L{0.3\linewidth}}
 &\huge{\textbf{Rowan Molony}}& \\[7.5pt]
 
@@ -93,9 +95,9 @@
 \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.05\height}\faLinkedin\ rowanmolony} \\
 \end{tabularx}
 
-%----------------------------------------------------------------------------------------
-% EXPERIENCE
-%----------------------------------------------------------------------------------------
+%------------
+% Experience
+%------------
 \section{Work Experience}
 
 \cventry{Thalora Ltd}{Dublin, Ireland}
@@ -118,9 +120,9 @@
     {\item TODO}
     {}
 
-%----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
+%-----------
+% Education
+%-----------
 \section{Education}
 
 \cventry{Master's Mechanical \& Manufacturing Engineering}{Dublin, Ireland}
@@ -134,3 +136,5 @@
     {}
 
 \end{document}
+
+% ---------------------------------------------------------
