style: set body color to same as blog

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,8 @@
 % ------
 
 % Set the main text color to 80% black (dark gray)
-\colorlet{body}{black!80!white}
+\definecolor{bodycolor}{RGB}{248,250,252}
+\colorlet{body}{bodycolor}
 
 % Set the default font to sans-serif for the entire document
 \renewcommand{\familydefault}{\sfdefault}
