style: set hyperlink color to blue

--- a/main.tex
+++ b/main.tex
@@ -32,9 +32,9 @@
 % Remove paragraph indentation throughout the document
 \setlength{\parindent}{0pt}
 
-% Define a dark green color for hyperlinks
+% Define a color for hyperlinks
 % & configure hyperlinks to use the defined color and other properties
-\definecolor{linkcolour}{RGB}{21,71,52}
+\definecolor{linkcolour}{RGB}{0,51,102}
 \hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour}
 
 % Define custom column types for tables:
@@ -91,7 +91,7 @@
 \begin{tabularx}{\linewidth}{R{0.3\linewidth} C{0.3\linewidth} L{0.3\linewidth}}
 &\huge{\textbf{Rowan Molony}}& \\[7.5pt]
 
-\raisebox{-0.05\height}\faMobile \ +353 86 212 0533 &
+\href{tel:+353862120533}{\raisebox{-0.05\height}\faMobile \ +353 86 212 0533} &
 \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ rowanmolony@gmail.com} &
 \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.05\height}\faLinkedin\ rowanmolony} \\
 \end{tabularx}
