--- a/main.tex
+++ b/main.tex
@@ -75,8 +75,7 @@
         \end{minipage}
       }
     \end{tabularx}
-  
-    #5% Optional vertical space or other content between entries
+    \vspace{5pt}
 }
 
 
@@ -95,6 +94,8 @@
 \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ rowanmolony@gmail.com} &
 \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.05\height}\faLinkedin\ rowanmolony} \\
 \end{tabularx}
+
+\vspace{5pt}
 
 %------------
 % Experience
