--- a/main.tex
+++ b/main.tex
@@ -102,40 +102,70 @@
 %------------
 \section{Work Experience}
 
-\cventry{Thalora Ltd}{Dublin, Ireland}
+\cventry{Thalora Ltd}
+    {Dublin, Ireland}
     {Co-Founder \& Software Engineer (Dec 2023 - Present)}
-    {\item TODO}
-    {}
+    {
+        \item I formed Thalora Ltd to enable me to continue
+        working with MRP on a consultancy basis.
+    }
 
-\cventry{PowerScope Ltd}{Dublin, Ireland}
+\cventry{PowerScope Ltd}
+    {Dublin, Ireland}
     {Co-Founder \& Software Engineer (Jul 2020 - Feb 2022)}
-    {\item TODO}
-    {}
+    {
+        \item I formed PowerScope Ltd alongside Terry McGrenaghan with
+        the initial goal of creating a software tool to model the investment
+        case for battery storage for large-scale commercial projects. In
+        so doing I built (a) a linear optimisation framework (Python) tailored
+        for timeseries data, (b) a battery dispatch model on top of it, (c) a
+        React-based web application on the AWS stack (Amplify, AppSync,
+        Lambda, DynamoDB).
+    }
 
-\cventry{Mainstream Renewable Power}{Dublin, Ireland}
+\cventry{Mainstream Renewable Power (MRP)}
+    {Dublin, Ireland}
     {Web Developer (Oct 2021 - Dec 2023)}
-    {\item TODO}
-    {}
+    {
+        \item I fully rebuilt the backend (Django/Postgres) of the MRP data platform,
+        StationManager, to resolve its reliability issues. In so doing, I gradually simplified the
+        system's architecture by removing or combining its constituent components
+        (thus removing thousands of lines of code) with the help of continuously running
+        unit \& integration test suite.
+    }
 
-\cventry{Codema}{Dublin, Ireland}
+\cventry{Codema}
+    {Dublin, Ireland}
     {Data Analyst (Aug 2019 - Oct 2021)}
-    {\item TODO}
-    {}
+    {
+        \item I worked on a research project, the Dublin Region Energy Masterplan
+        in collaboration with the four Dublin municipalities. Its goal was to derive
+        insights about the Dublin energy system from various publicly available datasets.
+        I was in charge of modelling the impact of policy changes on the built environment.
+        To do so, I built my own energy model and data wrangling toolkit using open source
+        libraries (like Pandas, Matplotlib, Numpy). This work was developed \& remains
+        available \href{https://github.com/codema-dev/projects}{on GitHub}.
+    }
 
 %-----------
 % Education
 %-----------
 \section{Education}
 
-\cventry{Master's Mechanical \& Manufacturing Engineering}{Dublin, Ireland}
-    {Trinity College Dublin (Sept 2018 - June 2019)}
-    {\item TODO}
-    {}
-
-\cventry{Bachelor's Mechanical \& Manufacturing Engineering}{Dublin, Ireland}
-    {Trinity College Dublin (Sept 2014 - June 2018)}
-    {\item TODO}
-    {}
+\cventry{Bachelor's \& Master's Mechanical \& Manufacturing Engineering}
+    {Dublin, Ireland}
+    {Trinity College Dublin (Sept 2014 - June 2019)}
+    {
+        \item In 2018, I graduated my Bachelor's with 1st class honours (gold medal).
+        \item In 2019, I completed a 1st class honours Masters also in Trinity College,
+        again in mechanical engineering, specialising in energy systems.
+        \item The degree remained multidisciplinary for two years, which exposed
+        me to multiple courses in programming languages C++ \& Matlab.
+        \item I was one of eight people selected to participate in a one year
+        multidisciplinary design project during my Masters year. My team of four
+        were funded by a corporate sponsor to explore an open-ended design problem
+        for them.
+    }
 
 \end{document}
 
