--- a/main.tex
+++ b/main.tex
@@ -103,16 +103,16 @@
 \section{Work Experience}
 
 \cventry{Thalora Ltd}
-    {Dublin, Ireland}
-    {Co-Founder \& Software Engineer (Dec 2023 - Present)}
+    {Dec 2023 - Present}
+    {Co-Founder \& Software Engineer}
     {
         \item I formed Thalora Ltd to enable me to continue
         working with MRP on a consultancy basis.
     }
 
 \cventry{PowerScope Ltd}
-    {Dublin, Ireland}
-    {Co-Founder \& Software Engineer (Jul 2020 - Feb 2022)}
+    {Jul 2020 - Feb 2022}
+    {Co-Founder \& Software Engineer}
     {
         \item I formed PowerScope Ltd alongside Terry McGrenaghan with
         the initial goal of creating a software tool to model the investment
@@ -124,8 +124,8 @@
     }
 
 \cventry{Mainstream Renewable Power (MRP)}
-    {Dublin, Ireland}
-    {Web Developer (Oct 2021 - Dec 2023)}
+    {Oct 2021 - Dec 2023}
+    {Web Developer}
     {
         \item I fully rebuilt the backend (Django/Postgres) of the MRP data platform,
         StationManager, to resolve its reliability issues. In so doing, I gradually simplified the
@@ -135,16 +135,16 @@
     }
 
 \cventry{Codema}
-    {Dublin, Ireland}
-    {Data Analyst (Aug 2019 - Oct 2021)}
+    {Aug 2019 - Oct 2021}
+    {Data Analyst}
     {
-        \item I worked on a research project, the Dublin Region Energy Masterplan
-        in collaboration with the four Dublin municipalities. Its goal was to derive
-        insights about the Dublin energy system from various publicly available datasets.
+        \item I worked on the Dublin Region Energy Masterplan in collaboration with
+        the four Dublin municipalities. Its goal was to derive insights about the Dublin energy
+        system from various publicly available datasets.
         I was in charge of modelling the impact of policy changes on the built environment.
-        To do so, I built my own energy model and data wrangling toolkit using open source
-        libraries (like Pandas, Matplotlib, Numpy). This work was developed \& remains
-        available \href{https://github.com/codema-dev/projects}{on GitHub}.
+        In doing so, I built my own toolkit and energy model in the open
+        \href{https://github.com/codema-dev/projects}{on GitHub}
+        on top of open source libraries (Pandas, scikit-learn, networkx etc).
     }
 
 %-----------
@@ -152,19 +152,18 @@
 %-----------
 \section{Education}
 
-\cventry{Bachelor's \& Master's Mechanical \& Manufacturing Engineering}
-    {Dublin, Ireland}
-    {Trinity College Dublin (Sept 2014 - June 2019)}
+\cventry{Trinity College, Dublin}
+    {Sept 2014 - June 2019}
+    {Bachelor's \& Master's Degree in Mechanical \& Manufacturing Engineering}
     {
         \item In 2018, I graduated my Bachelor's with 1st class honours (gold medal).
+        The degree remained multidisciplinary for two years, which exposed
+        me to multiple courses in programming languages C++ \& Matlab.
         \item In 2019, I completed a 1st class honours Masters also in Trinity College,
         again in mechanical engineering, specialising in energy systems.
-        \item The degree remained multidisciplinary for two years, which exposed
-        me to multiple courses in programming languages C++ \& Matlab.
-        \item I was one of eight people selected to participate in a one year
-        multidisciplinary design project during my Masters year. My team of four
-        were funded by a corporate sponsor to explore an open-ended design problem
-        for them.
+        I was one of eight people selected to participate in a one year
+        user-centered design project during my Masters year. My team of four
+        were funded by a corporate sponsor to explore an open-ended design problem.
     }
 
 \end{document}
