feat: update cv

--- a/main.tex
+++ b/main.tex
@@ -100,15 +100,14 @@
 %------------
 % Experience
 %------------
-\section{Work Experience}
+\section{Experience}
 
 \cventry{Thalora Ltd}
     {Dec 2023 - Present}
     {Co-Founder \& Software Engineer}
     {
-        \item I formed Thalora Ltd to enable me to continue
-        working with MRP on a consultancy basis.
-
+        \item 
+        I formed Thalora Ltd to enable me to continue working with MRP on a consultancy basis.
         \vspace{5pt}
     }
 
@@ -116,34 +115,27 @@
     {Jul 2020 - Feb 2022}
     {Co-Founder \& Software Engineer}
     {
-        \item I formed PowerScope Ltd alongside Terry McGrenaghan with
-        the initial goal of creating a software tool to model the investment
-        case for battery storage for large-scale commercial projects. In
-        so doing I built (a) a linear optimisation framework (Python) tailored
-        for timeseries data, (b) a battery dispatch model on top of it, (c) a
-        React-based web application on the AWS stack (Amplify, AppSync,
-        Lambda, DynamoDB).
+        \item
+        Terry McGrenaghan \& I formed PowerScope Ltd to create a simple \& intuitive software tool to enable teams to model the investment case for battery storage for large-scale commercial projects.
+        In so doing I built (a) a linear optimisation framework (in Python) tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) a React-based web application on the AWS stack (Amplify, AppSync, Lambda, DynamoDB).
     }
 
 \cventry{Mainstream Renewable Power (MRP)}
     {Oct 2021 - Dec 2023}
     {Web Developer}
     {
-        \item I fully rebuilt the backend (Django/Postgres) of the MRP data platform,
-        StationManager, to resolve its reliability issues. In so doing, I gradually simplified the
-        system's architecture by removing or combining its constituent components
-        (thus removing thousands of lines of code) with the help of continuously running
-        unit \& integration test suite.
+        \item
+        Over several years I fully rebuilt the backend (Django/Postgres) of the MRP data platform, StationManager, to resolve its reliability issues.
+        In so doing, I (a) captured the developer environment (Docker \& Nix), (b) grew a test suite (unit, integration, \& end to end) to cover all usage patterns in continuous integration (GitHub Actions), (c) most significantly, simplified the system's architecture by removing, combining or replacing its constituent components with more appropriate tooling (Postgres+TimescaleDB instead of MySQL/SQL Server/Pandas/File Storage), thus removing thousands of lines of code.
     }
 
 \cventry{Codema}
     {Aug 2019 - Oct 2021}
     {Data Analyst}
     {
-        \item I worked on the Dublin Region Energy Masterplan in collaboration with
-        the four Dublin municipalities. Its goal was to derive insights about the Dublin energy
-        system from various publicly available datasets.
-        I was in charge of modelling the impact of policy changes on the built environment.
+        \item 
+        I worked on the Dublin Region Energy Masterplan, in collaboration with the four Dublin municipalities, which aimed to create procedures and tools model the impact of energy policy changes on the energy system \& carbon reduction.
+        I was in tasked with modelling the built environment to derive insights with the help of various publicly available datasets.
         In doing so, I built my own toolkit and energy model in the open
         \href{https://github.com/codema-dev/projects}{on GitHub}
         on top of open source libraries (Pandas, scikit-learn, networkx etc).
@@ -158,14 +150,17 @@
     {Sept 2014 - June 2019}
     {Bachelor's \& Master's Degree in Mechanical \& Manufacturing Engineering}
     {
-        \item In 2018, I graduated my Bachelor's with 1st class honours (gold medal).
+        \item 
+        In 2018, I graduated my Bachelor's with 1st class honours (gold medal).
         The degree remained multidisciplinary for two years, which exposed
         me to multiple courses in programming languages C++ \& Matlab.
-        \item In 2019, I completed a 1st class honours Masters also in Trinity College,
+
+        \item 
+        In 2019, I completed a 1st class honours Masters also in Trinity College,
         again in mechanical engineering, specialising in energy systems.
         I was one of eight people selected to participate in a one year
-        user-centered design project during my Masters year. My team of four
-        were funded by a corporate sponsor to explore an open-ended design problem.
+        user-centered design project during my Masters year.
+        My team of four were funded by a corporate sponsor to explore an open-ended design problem.
     }
 
 \end{document}
