--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,9 @@
     \vspace{5pt}
 }
 
+% Define skill categories and references
+\newcommand{\skillref}[1]{\textsuperscript{\textit{#1}}}
+
 
 % ---------------------------------------------------------
 % Document
@@ -87,48 +90,62 @@
 
 \vspace{10pt}
 
+%--------
+% Skills
+%--------
+
+\section{Skills}
+
+\begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
+    \item \textbf{Backend Web Development}: Server-Side Rendered HTML (Django)\skillref{2,4}, REST APIs (Django Rest Framework)\skillref{2,4}, GraphQL (AWS AppSync)\skillref{3}
+    \item \textbf{Frontend Web Development}: Single Page Applications (React)\skillref{3}, CSS Styling (TailwindCSS)\skillref{3}, Component Tests (StorybookJS)\skillref{3}
+    \item \textbf{Data Storage}: Relational Databases (MySQL, Postgres, TimescaleDB)\skillref{2,4}, Document Stores (AWS DynamoDB)\skillref{3}
+    \item \textbf{Software Engineering}: Version Control (git)\skillref{1,2,3,4}, Code Collaboration (GitHub)\skillref{1,2,3,4}, Test-Driven Development (pytest\skillref{1,2,4}, Selenium\skillref{2,4}, nbdev\skillref{3}), Continuous Integration (GitHub Actions)\skillref{1,2,3,4}
+    \item \textbf{Infrastructure}: Containerization (Docker\skillref{1,2,3,4}, Nix\skillref{3}), Continuous Deployment (AWS Amplify)\skillref{3}, Infrastructure as Code (Terraform, AWS CDK)\skillref{3}
+    \item \textbf{Data Analysis}: Linear Optimization (bespoke)\skillref{3}, Data Wrangling (Pandas)\skillref{1}, Workflow Orchestration (Ploomber, Prefect)\skillref{1}, Geospatial Analysis (GeoPandas)\skillref{1}, Machine Learning (scikit-learn)\skillref{1}, Network Analysis (networkx)\skillref{1}
+\end{itemize}
+
+\vspace{10pt}
+
 %------------
 % Experience
 %------------
 \section{Experience}
 
-\cventry{Thalora Ltd}
+\cventry{Thalora Ltd\skillref{4}}
     {Dec 2023 - Present}
     {Co-Founder \& Software Engineer}
     {
         \item 
-        I formed Thalora Ltd to enable me to continue working with MRP on a consultancy basis.
+        I formed Thalora Ltd through which I continued working with MRP on a consultancy basis.
         \vspace{5pt}
     }
 
-\cventry{PowerScope Ltd}
+\cventry{PowerScope Ltd\skillref{3}}
     {Jul 2020 - Feb 2022}
     {Co-Founder \& Software Engineer}
     {
         \item
-        Terry McGrenaghan \& I formed PowerScope Ltd to create a simple \& intuitive software tool to enable teams to model the investment case for battery storage for large-scale commercial projects.
-        In so doing I built (a) a linear optimisation framework (in Python) tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) a React-based web application on the AWS stack (Amplify, AppSync, Lambda, DynamoDB).
+        Terry McGrenaghan \& I initially formed PowerScope Ltd to create a software tool to enable teams to model the battery storage investment case for large-scale commercial projects.
+        In so doing I built (a) a linear optimisation framework (in Python) tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) an interactive web application on the AWS Amplify stack.
     }
 
-\cventry{Mainstream Renewable Power (MRP)}
+\cventry{Mainstream Renewable Power (MRP)\skillref{2}}
     {Oct 2021 - Dec 2023}
     {Web Developer}
     {
         \item
-        Over several years I fully rebuilt the backend (Django/Postgres) of the MRP data platform, StationManager, to resolve its reliability issues.
-        In so doing, I (a) captured the developer environment (Docker \& Nix), (b) grew a test suite (unit, integration, \& end to end) to cover all usage patterns in continuous integration (GitHub Actions), (c) most significantly, simplified the system's architecture by removing, combining or replacing its constituent components with more appropriate tooling (Postgres+TimescaleDB instead of MySQL/SQL Server/Pandas/File Storage), thus removing thousands of lines of code.
+        Over several years I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues.
+        In so doing, I (a) captured the developer environment, (b) grew a test suite (unit, integration, \& end to end) to cover all usage patterns in continuous integration, (c) most significantly, simplified the system's architecture by removing, combining or replacing its constituent components with more appropriate tooling, thus removing thousands of lines of code.
     }
 
-\cventry{Codema}
+\cventry{Codema\skillref{1}}
     {Aug 2019 - Oct 2021}
     {Data Analyst}
     {
         \item 
-        I worked on the Dublin Region Energy Masterplan, in collaboration with the four Dublin municipalities, which aimed to create procedures and tools model the impact of energy policy changes on the energy system \& carbon reduction.
-        I was in tasked with modelling the built environment to derive insights with the help of various publicly available datasets.
-        In doing so, I built my own toolkit and energy model in the open
-        \href{https://github.com/codema-dev/projects}{on GitHub}
-        on top of open source libraries (Pandas, scikit-learn, networkx etc).
+        I tasked with modelling Dublin's built environment, as part of the Dublin Region Energy Masterplan, to enable estimating the impact of energy policy on Dublin's energy system.
+        In doing so, I built my own toolkit and energy model in the open \href{https://github.com/codema-dev/projects}{on GitHub} on top of open source libraries.
     }
 
 %-----------
