--- a/main.tex
+++ b/main.tex
@@ -96,14 +96,15 @@
 
 \section{Skills}
 
-\begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
-    \item \textbf{Backend Web Development}: Server-Side Rendered HTML (Django)\skillref{2,4}, REST APIs (Django Rest Framework)\skillref{2,4}, GraphQL (AWS AppSync)\skillref{3}
-    \item \textbf{Frontend Web Development}: Single Page Applications (React)\skillref{3}, CSS Styling (TailwindCSS)\skillref{3}, Component Tests (StorybookJS)\skillref{3}
-    \item \textbf{Data Storage}: Relational Databases (MySQL, Postgres, TimescaleDB)\skillref{2,4}, Document Stores (AWS DynamoDB)\skillref{3}
-    \item \textbf{Software Engineering}: Version Control (git)\skillref{1,2,3,4}, Code Collaboration (GitHub)\skillref{1,2,3,4}, Test-Driven Development (pytest\skillref{1,2,4}, Selenium\skillref{2,4}, nbdev\skillref{3}), Continuous Integration (GitHub Actions)\skillref{1,2,3,4}
-    \item \textbf{Infrastructure}: Containerization (Docker\skillref{1,2,3,4}, Nix\skillref{3}), Continuous Deployment (AWS Amplify)\skillref{3}, Infrastructure as Code (Terraform, AWS CDK)\skillref{3}
-    \item \textbf{Data Analysis}: Linear Optimization (bespoke)\skillref{3}, Data Wrangling (Pandas)\skillref{1}, Workflow Orchestration (Ploomber, Prefect)\skillref{1}, Geospatial Analysis (GeoPandas)\skillref{1}, Machine Learning (scikit-learn)\skillref{1}, Network Analysis (networkx)\skillref{1}
-\end{itemize}
+\begin{minipage}[t]{0.97\textwidth}
+  \begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
+      \item \textbf{Backend}: Server-Side Rendered HTML (Django, HTMX)\skillref{2,4}, REST APIs (Django Rest Framework)\skillref{2,4}, GraphQL (AWS AppSync)\skillref{3}, Relational Databases (MySQL, Postgres, TimescaleDB)\skillref{2,4}, Task Queues (Dramatiq, Redis)\skillref{2,4}, Document Stores (AWS DynamoDB)\skillref{3}
+      \item \textbf{Frontend}: Single Page Applications (React)\skillref{3}, CSS (TailwindCSS)\skillref{3}, Component Tests (StorybookJS)\skillref{3}
+      \item \textbf{Good Practice}: Version Control (git)\skillref{1,2,3,4}, Code Collaboration (GitHub)\skillref{1,2,3,4}, Test-Driven Development (pytest\skillref{1,2,4}, Selenium\skillref{2,4}, nbdev\skillref{3}), Continuous Integration (GitHub Actions)\skillref{1,2,3,4}
+      \item \textbf{Infrastructure}: Containerisation (Docker\skillref{1,2,3,4}, Nix\skillref{3}), Continuous Deployment (AWS Amplify)\skillref{3}, Infrastructure as Code (Terraform, AWS CDK)\skillref{3}
+      \item \textbf{Data Analysis}: Linear Optimization (bespoke)\skillref{3}, Data Wrangling (Pandas)\skillref{1}, Workflow Orchestration (Ploomber, Prefect)\skillref{1}, Geospatial Analysis (GeoPandas)\skillref{1}, Machine Learning (scikit-learn)\skillref{1}, Network Analysis (networkx)\skillref{1}
+  \end{itemize}
+\end{minipage}
 
 \vspace{10pt}
 
