feat: update cv

--- a/main.tex
+++ b/main.tex
@@ -127,8 +127,8 @@
     {Co-Founder \& Software Engineer}
     {
         \item
-        Terry McGrenaghan \& I initially formed PowerScope Ltd to create a software tool to enable teams to model the battery storage investment case for large-scale commercial projects.
-        In so doing I built (a) a linear optimisation framework (in Python) tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) an interactive web application on the AWS Amplify stack.
+        Terry McGrenaghan \& I initially formed PowerScope Ltd to empower solar panel installers to model the investment case for battery storage for commercial projects, with the help of our software, without having to rely on external consultants.
+        In so doing I (a) built a linear optimisation framework (in Python) tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) an interactive web application on the AWS Amplify stack.
     }
 
 \cventry{Mainstream Renewable Power (MRP)\skillref{2}}
@@ -137,7 +137,7 @@
     {
         \item
         Over several years I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues.
-        In so doing, I (a) captured the developer environment, (b) grew a test suite (unit, integration, \& end to end) to cover all usage patterns in continuous integration, (c) most significantly, simplified the system's architecture by removing, combining or replacing its constituent components with more appropriate tooling, thus removing thousands of lines of code.
+        In so doing I (a) captured the developer environment, (b) grew a test suite (unit, integration, \& end to end) to cover common usage patterns in continuous integration, (c) simplified the system's architecture by removing, combining, or replacing its constituent components with more appropriate tools. The resulting system was far more robust, understandable and maintainable (including thousands of lines of code smaller) while still achieiving the same functionality.
     }
 
 \cventry{Codema\skillref{1}}
