--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,7 @@
 
 \begin{minipage}[t]{0.97\textwidth}
   \begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
-      \item \textbf{Backend}: Server-Side Rendered HTML (Django, HTMX)\skillref{2,4}, REST APIs (Django Rest Framework)\skillref{2,4}, GraphQL (AWS AppSync)\skillref{3}, Relational Databases (MySQL, Postgres, TimescaleDB)\skillref{2,4}, Task Queues (Dramatiq, Redis)\skillref{2,4}, Document Stores (AWS DynamoDB)\skillref{3}
+      \item \textbf{Backend}: Server-Side Rendered HTML (Django, HTMX)\skillref{2,4}, REST APIs (Django Rest Framework)\skillref{2,4}, Relational Databases (MySQL, Postgres, TimescaleDB)\skillref{2,4}, Task Queues (Dramatiq, Redis)\skillref{2,4}, GraphQL (AWS AppSync)\skillref{3}, Document Stores (AWS DynamoDB)\skillref{3}
       \item \textbf{Frontend}: Single Page Applications (React)\skillref{3}, CSS (TailwindCSS)\skillref{3}, Component Tests (StorybookJS)\skillref{3}
       \item \textbf{Good Practice}: Version Control (git)\skillref{1,2,3,4}, Code Collaboration (GitHub)\skillref{1,2,3,4}, Test-Driven Development (pytest\skillref{1,2,4}, Selenium\skillref{2,4}, nbdev\skillref{3}), Continuous Integration (GitHub Actions)\skillref{1,2,3,4}
       \item \textbf{Infrastructure}: Containerisation (Docker\skillref{1,2,3,4}, Nix\skillref{3}), Continuous Deployment (AWS Amplify)\skillref{3}, Infrastructure as Code (Terraform, AWS CDK)\skillref{3}
@@ -142,9 +142,9 @@
   {Oct 2021 - Dec 2023}
   {
       \item
-      Over several years I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues.
+      I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues.
       \item
-      In so doing, I (a) captured the developer environment, (b) grew a test suite (unit, integration, \& end to end) to cover common usage patterns in continuous integration, (c) simplified the system's architecture by removing, combining, or replacing its constituent components with more appropriate tools. The resulting system was far more robust, understandable and maintainable (including thousands of lines of code smaller) while still achieiving the same functionality.
+      In so doing, I (a) captured the developer environment, (b) grew a test suite (unit, integration, \& end to end) from nil to cover common usage patterns in continuous integration, (c) simplified the system's architecture by removing, combining, or replacing its constituent components. The resulting system was far more robust, understandable and maintainable while continuing to enable the same functionality.
   }
 
 \cventry
@@ -153,9 +153,9 @@
   {Aug 2019 - Oct 2021}
   {
       \item 
-      I tasked with modelling Dublin's built environment, as part of the Dublin Region Energy Masterplan, to enable estimating the impact of energy policy on Dublin's energy system.
+      I was tasked with modelling Dublin's built environment (as part of the Dublin Region Energy Masterplan) to enable estimating the impact of energy policy on Dublin's energy system.
       \item
-      In so doing, I built my own toolkit and energy model in the open \href{https://github.com/codema-dev/projects}{\underline{on GitHub}} on top of open source libraries.
+      In so doing, I built my own toolkit and energy model \href{https://github.com/codema-dev/projects}{\underline{in the open on GitHub}} on top of open source libraries.
   }
 
 %-----------
@@ -168,18 +168,12 @@
   {Trinity College, Dublin}
   {Sept 2014 - June 2019}
   {
-      \item 
-      In 2018, I graduated my Bachelor's (BAI) with 1st class honours (gold medal).
-      \item
-      The degree remained multidisciplinary for two years, which exposed
-      me to multiple courses in programming languages C++ \& Matlab.
+    \item 
+    In 2018, I graduated my Bachelor's (BAI) with 1st class honours (gold medal). The degree remained multidisciplinary for two years, which exposed
+    me to multiple courses in programming languages C++ \& Matlab.
 
-      \item 
-      In 2019, I completed a 1st class honours Masters (MAI), including a thesis in energy systems analysis.
-      \item
-      I was one of eight people selected to participate in a one year
-      user-centered design project during my Masters year.
-      My team of four were funded by a corporate sponsor to explore an open-ended design problem.
+    \item 
+    In 2019, I graduated my Master's (MAI) with a 1st class honours, including a thesis in energy systems analysis. I was one of eight people selected to participate in a one year user-centered design project - funded by a corporate sponsor.
   }
 
 \end{document}
