feat: update cv

--- a/main.tex
+++ b/main.tex
@@ -170,7 +170,7 @@
   {
     \item 
     In 2018, I graduated my Bachelor's (BAI) with 1st class honours (gold medal). The degree remained multidisciplinary for two years, which exposed
-    me to multiple courses in programming languages C++ \& Matlab.
+    me to multiple courses in the programming languages C++ \& Matlab.
 
     \item 
     In 2019, I graduated my Master's (MAI) with a 1st class honours, including a thesis in energy systems analysis. I was one of eight people selected to participate in a one year user-centered design project - funded by a corporate sponsor.
