feat: elaborate on PowerScope

--- a/main.tex
+++ b/main.tex
@@ -131,7 +131,7 @@
   {Aug 2024 - Apr 2025}
   {
       \item
-      Terry McGrenaghan \& I initially formed PowerScope Ltd to empower solar panel installers to model the investment case for battery storage for commercial projects, with the help of our software, without having to rely on external consultants.
+      Terry McGrenaghan \& I initially formed PowerScope Ltd to create a software tool to empower solar panel installers to assess the investment case for battery storage. In April 2025, though we had made good progress, for a variety of reasons, we decided not to continue with PowerScope.
       \item
       In so doing, I (a) built a linear optimisation framework (in Python) tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) an interactive web application on the AWS Amplify stack.
   }
