chore: remove unused packages
inputnec is ignored -
Package inputenc: inputenc package ignored with utf8 based engines.

the xcolor library is deprecated -
Package xcolor: Package option `usenames' is obsolete and ignored

--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,8 @@
 
 \documentclass[a4paper,11pt]{article}
 
-\usepackage[utf8x]{inputenc} % for character encoding
 \usepackage{lmodern,textcomp} % to select font type
-\usepackage[usenames,dvipsnames]{xcolor} % for colored links and divider
+\usepackage[dvipsnames]{xcolor} % for colored links and divider
 \usepackage{enumitem} % for \item lists
 \usepackage{tabularx} % for sections
 \usepackage{titlesec} % for section titles
